[metadata]
name = arabic_llm_benchmark
version = 0.0.1
author = Fahim Dalvi
author_email = faimaduddin@hbku.edu.qa
description = Arabic Benchmark for LLMs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qcri
project_urls =
    Documentation = https://github.com/qcri
    Bug Tracker = https://github.com/qcri
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = 
    =.
install_requires =
    openai==0.27.7
    pandas==2.0.2
    scikit-learn==1.2.2
    tenacity==8.2.2
python_requires = >=3.8

[options.extras_require]
dev =
    pytest==7.0.1
    pytest-cov==3.0.0
    ufmt==1.3.2

[options.packages.find]
where = .
exclude = tests*
