[metadata]
name = llmebench
version = 0.1.0
author = Fahim Dalvi
author_email = faimaduddin@hbku.edu.qa
description = Benchmarking for LLMs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qcri
project_urls =
    Documentation = https://github.com/qcri
    Bug Tracker = https://github.com/qcri
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
package_dir = 
    =.
install_requires =
    nltk==3.8.1
    openai==0.27.7
    pandas==2.0.2
    pooch==1.7.0
    python-dotenv==1.0.0
    scikit-learn==1.2.2
    tenacity==8.2.2
    websockets==11.0.3
python_requires = >=3.8

[options.extras_require]
dev =
    langcodes==3.3.0
    pytest==7.3.1
    pytest-cov==4.1.0
    pytest-subtests==0.11.0
    ufmt==1.3.2
fewshot =
    langchain==0.0.198
    sentence_transformers==2.2.2
    faiss-cpu==1.7.4

[options.packages.find]
where = .
exclude = tests*

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::sklearn.exceptions.UndefinedMetricWarning
    ignore:divide by zero:RuntimeWarning
    ignore:Degrees of freedom:RuntimeWarning
    ignore:invalid value encountered in multiply:RuntimeWarning
